--- a/deftab.cabal
+++ b/deftab.cabal
@@ -3,7 +3,7 @@ cabal-version:       2.4
 -- For further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                deftab
-version:             0.1.0.0
+version:             0.1.5.0
 synopsis:            A tableau theorem prover for logics with default rules
 -- description:
 homepage:            https://hub.darcs.net/gh/deftab
@@ -20,6 +20,8 @@ extra-source-files:  CHANGELOG.md
 
 data-files:  examples/*.sh
              examples/*.dt
+             examples/hybrid_sat/*.frm
+             examples/hybrid_unsat/*.frm
              benchs/*.dt
 
 executable deftab
