--- a/deftab.cabal
+++ b/deftab.cabal
@@ -55,6 +55,7 @@ executable deftab
                        cmdargs >= 0.10.12,
                        array,
                        bytestring
+  build-tool-depends:  alex:alex >= 3.2 && < 3.3, happy:happy >= 1.19 && < 1.20
   default-language:    Haskell2010
   default-extensions:  Rank2Types
                        DeriveDataTypeable
